# Cogwright

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md  banner.html  capture.py  social.html
examples/: README.md
examples/manuals/: series7_conveyor_manual.txt
src/cogwright/: __init__.py
src/cogwright/adapters/: __init__.py  filesystem.py  http_endpoint.py  ocr.py  pdf_parser.py  text_parser.py  vision.py
src/cogwright/cli/: __init__.py  main.py
src/cogwright/core/: __init__.py  chunking.py  citation.py  code_index.py  config.py  engine.py  errors.py  index.py  models.py  prompt.py  protocols.py  retrieval.py  structured.py  vector_store.py
src/cogwright/eval/: __init__.py  dataset.py  metrics.py
src/cogwright/web/: __init__.py  app.py  server.py
src/cogwright/web/static/: index.html
tests/: __init__.py  builders.py  fakes.py  test_chunking.py  test_citation.py  test_cli.py  test_code_index.py  test_diagram.py  test_end_to_end.py  test_engine.py  test_eval.py  test_http_endpoint.py  test_lifecycle.py  test_ocr.py  test_ocr_engine.py  test_pdf_parser.py  test_prompt.py  test_repo_policy.py  test_retrieval.py  test_structured.py  test_text_parser.py  test_vision.py  test_web.py
tests/fixtures/sample_manual/: eval.json
